--- a/public/index.html
+++ b/public/index.html
@@ -84,7 +84,7 @@
                 <p class="mb-4 sm:text-xl text-black dark:text-black">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Officiis temporibus numquam quidem facere! Rem quae non perferendis, pariatur, magni aut repellendus ab recusandae voluptatum aperiam dolore consequatur ratione voluptatibus ex perspiciatis facilis corporis earum? Enim?</p>
             </div>
             <div class="grid grid-flow-col gap-4 justify-center">
-                <div class="relative hidden lg:block mx-auto border-gray-800 bg-gray-800 border-[14px] rounded-[2.5rem] h-[600px] w-[300px]">
+                <div class="mt-20 relative hidden lg:block mx-auto border-gray-800 bg-gray-800 border-[14px] rounded-[2.5rem] h-[600px] w-[300px]">
                     <div class="h-[32px] w-[3px] bg-gray-800 absolute -left-[17px] top-[72px] rounded-l-lg"></div>
                     <div class="h-[46px] w-[3px] bg-gray-800 absolute -left-[17px] top-[124px] rounded-l-lg"></div>
                     <div class="h-[46px] w-[3px] bg-gray-800 absolute -left-[17px] top-[178px] rounded-l-lg"></div>
@@ -93,7 +93,7 @@
                         <img src="./img/Page1.png" class="w-[272px] h-[572px]" alt="">
                     </div>
                 </div>
-                <div class="relative hidden lg:block mx-auto border-gray-800 bg-gray-800 border-[14px] rounded-[2.5rem] h-[600px] w-[300px]">
+                <div class="mb-20 relative hidden lg:block mx-auto border-gray-800 bg-gray-800 border-[14px] rounded-[2.5rem] h-[600px] w-[300px]">
                     <div class="h-[32px] w-[3px] bg-gray-800 absolute -left-[17px] top-[72px] rounded-l-lg"></div>
                     <div class="h-[46px] w-[3px] bg-gray-800 absolute -left-[17px] top-[124px] rounded-l-lg"></div>
                     <div class="h-[46px] w-[3px] bg-gray-800 absolute -left-[17px] top-[178px] rounded-l-lg"></div>
